--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
     "must": "^0.13.4",
+    "must-sinon": "0.0.0",
     "react-addons-test-utils": "^15.4.2",
+    "sinon": "^1.17.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
+    "express": "^4.15.0",
     "nanoajax": "^0.4.3",
     "react": "^15.4.2",
+    "react-autosuggest": "^9.0.0",
     "react-dom": "^15.4.2",
-    "express": "^4.15.0",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "request": "^2.80.0",
     "twitter-node-client": "0.0.6"
   }
