--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/server.js",
+    "start": "node ./server/src/main/javascript/server.js",
     "dev": "./node_modules/npm-run-all/bin/npm-run-all/index.js  --parallel dev-server dev-client",
-    "dev-server": "./node_modules/nodemon/bin/nodemon.js server/server.js --watch server",
+    "dev-server": "./node_modules/nodemon/bin/nodemon.js server/src/main/javascript/server.js --watch server/src/main/javascript",
     "dev-client": "webpack-dev-server --config ./web/webpack.config.js --hot --progress --colors --content-base ./web/build",
     "build": "./node_modules/webpack/bin/webpack.js --config ./web/webpack.config.js",
-    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --require ./web/src/test/testSetup.js --recursive ./web/src/test/javascript/**/**Test.js"
+    "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --require ./web/src/test/testSetup.js --recursive ./web/src/test/javascript/**/**Test.js ./server/src/test/javascript/**/**Test.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,9 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.23.0",
+    "bluebird": "^3.5.0",
     "enzyme": "^2.7.1",
+    "fake-request": "^0.2.1",
     "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
