--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
@@ -21,14 +22,19 @@
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.23.0",
     "bluebird": "^3.5.0",
+    "css-loader": "^0.26.2",
     "enzyme": "^2.7.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "fake-request": "^0.2.1",
     "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "mocha": "^3.2.0",
     "must": "^0.13.4",
     "react-addons-test-utils": "^15.4.2",
     "sinon": "^1.17.7",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
