--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "less-loader": "^2.2.3",
     "mocha": "^3.2.0",
     "must": "^0.13.4",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.2",
