--- a/package.json
+++ b/package.json
@@ -9,25 +9,13 @@
     "dev-server": "./node_modules/nodemon/bin/nodemon.js server/src/main/javascript/server.js --watch server/src/main/javascript",
     "dev-client": "webpack-dev-server --config ./web/webpack.config.js --hot --progress --colors --content-base ./web/build",
     "build": "./node_modules/webpack/bin/webpack.js --config ./web/webpack.config.js",
-    "postinstall": "webpack --config web/webpack.config.js",
+    "postInstall": "npm run build",
     "test": "./node_modules/mocha/bin/mocha --compilers js:babel-core/register --require ./web/src/test/testSetup.js --recursive ./web/src/test/javascript/**/**Test.js ./server/src/test/javascript/**/**Test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.23.0",
-    "bluebird": "^3.5.0",
-    "css-loader": "^0.26.2",
     "enzyme": "^2.7.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "fake-request": "^0.2.1",
-    "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
@@ -37,12 +25,20 @@
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
     "sinon": "^1.17.7",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.23.0",
+    "bluebird": "^3.5.0",
+    "css-loader": "^0.26.2",
     "express": "^4.15.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.4",
     "nanoajax": "^0.4.3",
     "react": "^15.4.2",
@@ -53,6 +49,9 @@
     "redux-thunk": "^2.2.0",
     "request": "^2.80.0",
     "request-promise": "^4.1.1",
-    "twitter-node-client": "0.0.6"
+    "style-loader": "^0.13.2",
+    "twitter-node-client": "0.0.6",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
