--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "react-addons-test-utils": "^15.4.2",
-    "sinon": "^1.17.7",
+    "sinon": "^1.17.7"
   },
   "dependencies": {
     "autoprefixer-loader": "^3.2.0",
